--- a/Server/package.json
+++ b/Server/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon server"
+    "server": "npx prisma generate && nodemon server"
   },
   "keywords": [],
   "author": "",
