--- a/Client/package.json
+++ b/Client/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.13.0",
+    "@cloudinary/url-gen": "^1.20.0",
     "@types/file-saver": "^2.0.7",
     "@types/react-lazy-load-image-component": "^1.6.3",
-    "axios": "^1.6.7",
+    "ai-generator": "file:",
+    "axios": "^1.7.7",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.0.8",
     "next-themes": "^0.2.1",
