--- a/Server/package.json
+++ b/Server/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@octoai/sdk": "^1.9.0",
     "@prisma/client": "^5.10.2",
     "axios": "^1.6.7",
     "cloudinary": "^2.0.1",
@@ -20,6 +21,9 @@
     "express": "^4.18.3",
     "nodemon": "^3.1.0",
     "openai": "^3.2.1",
-    "redis": "^4.6.13"
+    "plaiceholder": "^3.0.0",
+    "redis": "^4.6.13",
+    "server": "file:",
+    "sharp": "^0.33.5"
   }
 }
