--- a/Client/vercel.json
+++ b/Client/vercel.json
@@ -1,1 +1,9 @@
-{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
+{
+
+    "rewrites": [
+  
+      { "source": "/(.*)", "destination": "/" }
+  
+    ]
+  
+  }
